--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 header{
-   background-color: rgb(12, 170, 12); 
+   background-color: rgb(6, 23, 77); 
+   color: #eee7e7;
+   display:flex;
+   justify-content: space-around;
+}
+
+.cabecalho-imagem{
+  width: 20%;
+
 }
