--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
 }
 
+body{font-family: "Poppins", sans-serif;}
 .cabecalho {
   background-color: #424E61;
   color: white;
@@ -30,5 +31,15 @@
   background-image: linear-gradient(#424E61, #4EBFE9);
   color: white;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
 }
+.escola-div-conteudo{
+  width: 35%;
+}
+.escola-titulo{
+  padding: 24px 0;
+}
+
 
