--- a/style.css
+++ b/style.css
@@ -42,4 +42,10 @@ body{font-family: "Poppins", sans-serif;}
   padding: 24px 0;
 }
 
+.estudante-imagem{
+  width: 120px; ;
+}
 
+.estudante-icone{
+  width: 24px; ;
+}
